2014-04-23 Gabriel Hondet <gabrielhondet@gmail.com>

	* added detection of libraries in __init__.py
	* cleaned the svn mess, all python files in EweeStats/
	* renamed EweeStats.py to __main__.py
	* removed sphinxdoc sources
	* corrected MANIFEST.in
	* added html, text and latexpdf doc files in doc/
	* added Apache-2.0 license
	* setup.py now uses setuptools instead of distutils
	* added AUTHORS file
	* added CHANGELOG file
	* added EweeSensorTest to test sensors easily
	* updated setup.py
	* changed README
	* added CHANGES file to show changes per version
	* added TODO file
	
2014-04-22 Gabriel Hondet <gabrielhondet@gmail.com>

	* changed version from 0.0 to 0.0dev1

2014-04-21 Gabriel Hondet <gabrielhondet@gmail.com>

	* completed README
	* added __init__.py