@@ -1,3 +1,8 @@
+2014-04-26 Gabriel Hondet <gabrielhondet@gmail.com>
+
+	* added module graph.py
+	* changed path of saved datas, now in ~/ewee_data
+
 2014-04-23 Gabriel Hondet <gabrielhondet@gmail.com>
 
 	* added detection of libraries in __init__.py
